# BeorgTest

./: .gitignore  CMakeLists.txt  README.md  SetupProject.bat
src/: CMakeLists.txt  main.cpp
src/SimilarityChecking/: FeatureMatchingSimilarityChecker.cpp  FeatureMatchingSimilarityChecker.h  HistogrammSimilarityCkecker.cpp  HistogrammSimilarityCkecker.h  ISimilarityCkecker.h  TemplateSimilarityChecker.cpp  TemplateSimilarityChecker.h
